# confy

./: .gitignore  README.md  meson.build  win.ohmyiris.Confy.json  win.ohmyiris.confy.json
data/: meson.build  win.ohmyiris.Confy.desktop.in  win.ohmyiris.Confy.gschema.xml  win.ohmyiris.Confy.metainfo.xml.in  win.ohmyiris.Confy.service.in  win.ohmyiris.confy.desktop.in  win.ohmyiris.confy.gschema.xml  win.ohmyiris.confy.metainfo.xml.in  win.ohmyiris.confy.service.in
data/collections/: dnf.yaml
data/extensions/: confy.py
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: confy.cmb  confy.gresource.xml  confy.in  main.py  meson.build  widget_factory.py  window.py  window.ui
